Bug 1551825 - Release mAnchorJumpElm and mInvalidationList in DocAccessible::Shutdown. r=Jamie a=jcristau

Differential Revision: https://phabricator.services.mozilla.com/D32197